--- a/style.css
+++ b/style.css
@@ -9,11 +9,13 @@ body{
 }
 
 .login-box{
-  width: 400px;
+  width: 100%;
   background: #fff;
   padding: 40px;
   border-radius: 12px;
   box-shadow: 0px 4px 12px rgba(0,0,0,0.1);
+  max-width:400px;
+  box-sizing: border-box;
 }
 
 p{
