--- a/style.css
+++ b/style.css
@@ -9,13 +9,12 @@ body{
 }
 
 .login-box{
-  width: 100%;
+  width: 400px;
   background: #fff;
   padding: 40px;
   border-radius: 12px;
   box-shadow: 0px 4px 12px rgba(0,0,0,0.1);
-  max-width:400px;
-  box-sizing: border-box;
+
 }
 
 p{
@@ -108,7 +107,10 @@ input{
 }
 @media (max-width: 480px) {
   .login-box {
-    tranform: scale(0.9);
-    transform-origin: top center;
+  width: 300px;
+  background: #fff;
+  padding: 40px;
+  border-radius: 12px;
+  box-shadow: 0px 4px 12px rgba(0,0,0,0.1);
   }
 }
